# discore

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: check.yml
discore/: __init__.py  _api.py
discore/models/: __init__.py  _channel.py  _emoji.py  _guild.py  _user.py  _voice.py  gateway.py  webhook.py
tests/: test_emoji.py  test_model.py  test_user.py
